# performance-test

./: .gitignore  README.md  godot-perf.code-workspace
gdext/src/: summator.cpp  summator.h
godot/: project.godot  test.gd  test.tscn
godot/addons/godot-performance-rust/: godot-performance-rust.gdextension
rust/: Cargo.toml
rust/src/: lib.rs  register_types.os
scripts/: build-cpp.sh  build-rust.sh
src/: Cargo.toml
src/src/: lib.rs
